--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hudson</title>
+    <title>Clotilde Denner</title>
 
     <script>
         document.documentElement.classList.remove('no-js');
@@ -86,9 +86,9 @@
 
                         <div class="s-intro__content-pretitle text-pretitle">Hello</div>
                         <h1 class="s-intro__content-title">
-                        I'm Jonathan Doe <br>
-                        a product designer <br>
-                        base in Somewhere.
+                        Clotilde Denner <br>
+                        Communication <br>
+                        Graphisme et Montage vidéo.
                         </h1>                            
 
                         <div class="s-intro__content-btns">
@@ -286,9 +286,9 @@
             <div class="row folio-entries">
 
                 <div class="column entry">
-                    <a href="images/folio/gallery/g-turban.jpg" class="entry__link glightbox" data-glightbox="title: White Knit Cap; description: .entry__desc-01">
+                    <a href="images/folio/gallery/cloze 1.jpg class="entry__link glightbox" data-glightbox="title: White Knit Cap; description: .entry__desc-01">
                         <div class="entry__thumb">
-                            <img src="images/folio/white_turban.jpg" srcset="images/folio/white_turban.jpg 1x, images/folio/white_turban@2x.jpg 2x" alt="">
+                            <img src="images/folio/cloze 1.jpg" srcset="images/folio/cloze 1.jpg 1x, images/folio/cloze 1.jpg 2x" alt="">
                         </div>
                         <div class="entry__info">
                             <h4 class="entry__title">White Knit Cap</h4>
@@ -307,9 +307,9 @@
                 </div> <!-- entry -->
 
                 <div class="column entry">
-                    <a href="images/folio/gallery/g-woodcraft.jpg" class="entry__link glightbox" data-glightbox="title: WoodCraft; description: .entry__desc-02">
+                    <a href="images/folio/gallery/1.png" class="entry__link glightbox" data-glightbox="title: WoodCraft; description: .entry__desc-02">
                         <div class="entry__thumb">
-                            <img src="images/folio/woodcraft.jpg" srcset="images/folio/woodcraft.jpg 1x, images/folio/woodcraft@2x.jpg 2x" alt="">
+                            <img src="images/folio/1.png" srcset="images/folio/1.png 1x, images/folio/1.png 2x" alt="">
                         </div>
                         <div class="entry__info">
                             <h4 class="entry__title">WoodCraft</h4>
@@ -328,9 +328,9 @@
                 </div> <!-- entry -->
 
                 <div class="column entry">
-                    <a href="images/folio/gallery/g-tulips.jpg" class="entry__link glightbox" data-glightbox="title: Caffeine & Tulips; description: .entry__desc-03">
+                    <a href="images/folio/gallery/667.jpg" class="entry__link glightbox" data-glightbox="title: Caffeine & Tulips; description: .entry__desc-03">
                         <div class="entry__thumb">
-                            <img src="images/folio/caffeine_and_tulips.jpg" srcset="images/folio/caffeine_and_tulips.jpg 1x, images/folio/caffeine_and_tulips@2x.jpg 2x" alt="">
+                            <img src="images/folio/667.jpg" srcset="images/folio/667.jpg 1x, images/folio/667.jpg 2x" alt="">
                         </div>
                         <div class="entry__info">
                             <h4 class="entry__title">Caffeine & Tulips</h4>
@@ -349,9 +349,9 @@
                 </div> <!-- entry -->
 
                 <div class="column entry">
-                    <a href="images/folio/gallery/g-grayscale.jpg" class="entry__link glightbox" data-glightbox="title: Grayscale; description: .entry__desc-04">
+                    <a href="images/folio/gallery/affihce 1.png" class="entry__link glightbox" data-glightbox="title: Grayscale; description: .entry__desc-04">
                         <div class="entry__thumb">
-                            <img src="images/folio/grayscale.jpg" srcset="images/folio/grayscale.jpg 1x, images/folio/grayscale@2x.jpg 2x" alt="">
+                            <img src="images/folio/affihce 1.png" srcset="images/folio/affihce 1.png 1x, images/folio/affihce 1.png 2x" alt="">
                         </div>
                         <div class="entry__info">
                             <h4 class="entry__title">Grayscale</h4>
@@ -370,9 +370,9 @@
                 </div> <!-- entry -->
 
                 <div class="column entry">
-                    <a href="images/folio/gallery/g-lamp.jpg" class="entry__link glightbox" data-glightbox="title: The Lamp; description: .entry__desc-05">
+                    <a href="images/folio/gallery/C02118E7-712C-46DF-B173-C74E1C5015E6.jpeg" class="entry__link glightbox" data-glightbox="title: The Lamp; description: .entry__desc-05">
                         <div class="entry__thumb">
-                            <img src="images/folio/lamp.jpg" srcset="images/folio/lamp.jpg 1x, images/folio/lamp@2x.jpg 2x" alt="">
+                            <img src="images/folio/C02118E7-712C-46DF-B173-C74E1C5015E6.jpeg" srcset="images/folio/C02118E7-712C-46DF-B173-C74E1C5015E6.jpeg 1x, images/folio/C02118E7-712C-46DF-B173-C74E1C5015E6.jpeg 2x" alt="">
                         </div>
                         <div class="entry__info">
                             <h4 class="entry__title">The Lamp</h4>
@@ -391,9 +391,9 @@
                 </div> <!-- entry -->
 
                 <div class="column entry">
-                    <a href="images/folio/gallery/g-tropical.jpg" class="entry__link glightbox" data-glightbox="title: Tropical; description: .entry__desc-06">
+                    <a href="images/folio/gallery/NUMERIQUE.png" class="entry__link glightbox" data-glightbox="title: Tropical; description: .entry__desc-06">
                         <div class="entry__thumb">
-                            <img src="images/folio/tropical.jpg" srcset="images/folio/tropical.jpg 1x, images/folio/tropical@2x.jpg 2x" alt="">
+                            <img src="images/folio/NUMERIQUE.png"srcset="images/folio/NUMERIQUE.png 1x, images/folio/NUMERIQUE.png 2x" alt="">
                         </div>
                         <div class="entry__info">
                             <h4 class="entry__title">Tropical</h4>
