--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                 <div class="s-header__block">
                     <div class="s-header__logo">
                         <a class="logo" href="index.html">
-                            <img src="images/logo.svg" alt="Homepage">
+                            <h1 class="s-intro__content-title">
+                                Clotilde Denner 
+                            </h1>     
                         </a>
                     </div>
 
