--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </ul> <!-- end s-intro__social -->
 
             <div class="s-intro__content-media">                               
-                <img src="images/intro-bg.jpg" srcset="images/intro-bg.jpg 1x, images/intro-bg.jpg 2x" alt="">
+                <img src="images/clotilde.jpg" srcset="images/clotilde.jpg 1x, images/clotilde.jpg 2x" alt="">
             </div> <!-- s-intro__content-media -->                
 
             <div class="s-intro__btn-download">
