change font size title

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="s-header__block">
                     <div class="s-header__logo">
                         <a class="logo" href="index.html">
-                            <h1 class="s-intro__content-title">
+                            <h1 class="s-intro__content-title2">
                                 Clotilde Denner 
                             </h1>     
                         </a>
