--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             <div class="row folio-entries">
 
                 <div class="column entry">
-                    <a href="images/folio/gallery/cloze 1.jpg class="entry__link glightbox" data-glightbox="title: White Knit Cap; description: .entry__desc-01">
+                    <a href="images/folio/gallery/cloze 1.jpg" class="entry__link glightbox" data-glightbox="title: White Knit Cap; description: .entry__desc-01">
                         <div class="entry__thumb">
                             <img src="images/folio/cloze 1.jpg" srcset="images/folio/cloze 1.jpg 1x, images/folio/cloze 1.jpg 2x" alt="">
                         </div>
